--- a/reservas-servicios-service/src/main/resources/application.properties
+++ b/reservas-servicios-service/src/main/resources/application.properties
@@ -1,1 +1,37 @@
 spring.application.name=reservas-servicios-service
+server.port=8080
+spring.config.import=optional:file:.env[.properties]
+
+# Configuración de Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Heartbeat cada 5 segundos (originalmente 30s)
+eureka.client.lease-renewal-interval-in-seconds=5
+# Tiempo para considerar DOWN si no recibe heartbeats
+eureka.client.lease-expiration-duration-in-seconds=90
+eureka.client.enable-self-preservation=true
+
+# === PostgreSQL Connection ===
+# Spring usará los valores cargados del .env
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# === JPA / Hibernate Config ===
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# === Configuración de hikari ===
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.connection-test-query=SELECT 1
