Configuración deployment-servicios.yaml y service-servicios.yaml lista, con su repositorio de imagenes en Artifact Registry.

--- a/k8s/deployment-servicios.yaml
+++ b/k8s/deployment-servicios.yaml
@@ -1,26 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: title
+  name: deploy-servicios
+  namespace: StudioBarber
   labels:
-    app: title
+    app: reservas-servicios-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: title
+      app: reservas-servicios-service
   template:
     metadata:
-      name: title
       labels:
-        app: title
+        app: reservas-servicios-service
     spec:
       containers:
-        - name: title
-          image: nginx
-          imagePullPolicy: IfNotPresent
+        - name: reservas-servicios-service
+          # nombre local de la imagen -> servicios-service-local:latest (igual siempre )
+          image: us-central1-docker.pkg.dev/studiobarber-480215/repo-servicios/servicios-service:v1.0.0
+          imagePullPolicy: Always  # nos aseguramos que siempre use la ultima version de la imagen
           ports:
-            - containerPort: 80
+            - containerPort: 8083
               protocol: TCP
-      restartPolicy: Always
-      
+
+# cambios en el codigo = nueva imagen = nueva version vX.0.0
+# pasos para subir a Artifact Registry
+# 1. docker build -t api-gateway-local:latest . -> contruir imagen local
+# 2. docker tag api-gateway-local:latest us-central1-docker.pkg.dev/studiobarber-480215/repo-apigateway/api-gateway:v1.0.1 -> tag para subir a AR
+# 3. docker push us-central1-docker.pkg.dev/studiobarber-480215/repo-apigateway/api-gateway:v1.0.0 -> subir imagen
