service account name

--- a/k8s/deployment-servicios.yaml
+++ b/k8s/deployment-servicios.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: reservas-servicios-service
     spec:
+      serviceAccountName: servicios-permissions-ksa
       containers:
         - name: reservas-servicios-service
           # nombre local de la imagen -> servicios-service-local:latest (igual siempre )
