arreglos al perfil de entorno cloud y workflows fuera de la carpeta reservas-servicios-service

--- a/reservas-servicios-service/src/main/resources/application-cloud.properties
+++ b/reservas-servicios-service/src/main/resources/application-cloud.properties
@@ -1,9 +1,6 @@
 # === Server ===
 server.port=8082
 
-# === Seguridad (Dinámica) ===
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service:8081/oauth2/jwks
-
 # === Eureka (Configuración Producción) ===
 eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.client.register-with-eureka=true
@@ -15,10 +12,10 @@ eureka.client.lease-expiration-duration-in-seconds=90
 
 # === Base de Datos (Inyección Cloud) ===
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/reservasdb
-spring.datasource.username=usa-permissions@studiobarber-480215.iam.gserviceaccount.com
+spring.datasource.username=servicios-permissions@studiobarber-480215.iam.gserviceaccount.com
 #spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA / Hibernate (Modo Prod) ===
-spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
