servicios listo, con imagen creada

--- a/k8s/deployment-servicios.yaml
+++ b/k8s/deployment-servicios.yaml
@@ -59,6 +59,6 @@ spec:
 
 # cambios en el codigo = nueva imagen = nueva version vX.0.0
 # pasos para subir a Artifact Registry
-# 1. docker build -t api-gateway-local:latest . -> contruir imagen local
-# 2. docker tag api-gateway-local:latest us-central1-docker.pkg.dev/studiobarber-480215/repo-apigateway/api-gateway:v1.0.1 -> tag para subir a AR
-# 3. docker push us-central1-docker.pkg.dev/studiobarber-480215/repo-apigateway/api-gateway:v1.0.0 -> subir imagen
+# 1. docker build -t servicios-service-local:latest . -> contruir imagen local
+# 2. docker tag servicios-service-local:latest us-central1-docker.pkg.dev/studiobarber-480215/repo-servicios/servicios-service:v1.0.0 -> tag para subir a AR
+# 3. docker push us-central1-docker.pkg.dev/studiobarber-480215/repo-servicios/servicios-service:v1.0.0 -> subir imagen
